--- a/app.css
+++ b/app.css
@@ -596,10 +596,7 @@ html, body, #overlay {
   clear: both; }
 
 .left {
-  text-align: left; }
-
-.center {
-  text-align: center; }
+  float: left; }
 
 .right {
-  text-align: right; }
+  float: right; }
