--- a/app.css
+++ b/app.css
@@ -8,26 +8,22 @@
 @-webkit-keyframes fade-in {
   from {
     opacity: 0; }
-
   to {
     opacity: 1; } }
 @keyframes fade-in {
   from {
     opacity: 0; }
-
   to {
     opacity: 1; } }
 @-webkit-keyframes fade-out {
   from {
     opacity: 1; }
-
   to {
     opacity: 0;
     visibility: hidden; } }
 @keyframes fade-out {
   from {
     opacity: 1; }
-
   to {
     opacity: 0;
     visibility: hidden; } }
@@ -38,13 +34,13 @@
 body, input, textarea {
   font-family: 'Helvetica Neue', 'Calibri', sans-serif;
   line-height: 1.375em;
-  color: #222222; }
+  color: #222; }
 
 a, .accordion > dt {
   text-decoration: none;
-  color: royalblue; }
+  color: RoyalBlue; }
   a:visited, .accordion > dt:visited {
-    color: purple; }
+    color: Purple; }
   a:hover, .accordion > dt:hover {
     /* TODO */
     color: #273F87; }
@@ -77,24 +73,24 @@ h6 {
   font-size: 1em; }
 
 .msg.info {
-  color: cornflowerblue; }
+  color: CornflowerBlue; }
 .msg.caution {
-  color: orange; }
+  color: Orange; }
 .msg.alert {
-  color: tomato; }
+  color: Tomato; }
 .msg.success {
-  color: limegreen; }
+  color: LimeGreen; }
 .msg.disabled {
-  color: silver; }
+  color: Silver; }
 
 .dim {
-  color: silver; }
+  color: Silver; }
 
 .accordion {
   border-radius: 0.25em;
-  border: 1px solid gainsboro; }
+  border: 1px solid Gainsboro; }
   .accordion, .accordion > dt {
-    border: 1px solid gainsboro; }
+    border: 1px solid Gainsboro; }
   .accordion, .accordion > dd {
     margin: 0; }
   .accordion > dt, .accordion > dd {
@@ -107,7 +103,7 @@ h6 {
     .accordion > dt:hover {
       background: #e6ecf5; }
     .accordion > dt.open {
-      background: lightsteelblue;
+      background: LightSteelBlue;
       color: White; }
 
 a.button {
@@ -131,7 +127,7 @@ button {
     -webkit-animation: spin 1s linear infinite;
     animation: spin 1s linear infinite; }
   button[disabled], button[disabled]:hover {
-    background: silver; }
+    background: Silver; }
 
 button,
 a.button {
@@ -145,7 +141,7 @@ a.button {
     background: #527ecc; }
   button:hover,
   a.button:hover {
-    background: cornflowerblue; }
+    background: CornflowerBlue; }
   button.caution, button.caution.loading, button.caution.loading:hover,
   a.button.caution,
   a.button.caution.loading,
@@ -153,7 +149,7 @@ a.button {
     background: #e69e19; }
   button.caution:hover,
   a.button.caution:hover {
-    background: orange; }
+    background: Orange; }
   button.alert, button.alert.loading, button.alert.loading:hover,
   a.button.alert,
   a.button.alert.loading,
@@ -161,7 +157,7 @@ a.button {
     background: #e24c31; }
   button.alert:hover,
   a.button.alert:hover {
-    background: tomato; }
+    background: Tomato; }
   button.success, button.success.loading, button.success.loading:hover,
   a.button.success,
   a.button.success.loading,
@@ -169,7 +165,7 @@ a.button {
     background: #3ea73e; }
   button.success:hover,
   a.button.success:hover {
-    background: limegreen; }
+    background: LimeGreen; }
 
 .crumbs a:hover {
   background: none; }
@@ -179,7 +175,7 @@ a.button {
 .crumbs li:last-child::after {
   content: none; }
 .crumbs li:last-child a {
-  color: #222222; }
+  color: #222; }
   .crumbs li:last-child a:hover {
     cursor: default; }
 
@@ -203,18 +199,18 @@ a.button {
     height: 0;
     border-left: 1em solid transparent;
     border-right: 1em solid transparent;
-    border-bottom: 1em solid gainsboro; }
+    border-bottom: 1em solid Gainsboro; }
   .dropdown + *::after {
     width: 0;
     height: 0;
     border-left: 1em solid transparent;
     border-right: 1em solid transparent;
-    border-bottom: 1em solid white;
+    border-bottom: 1em solid White;
     margin-top: 1px; }
 .dropdown.open + * {
   display: block; }
 .dropdown + div {
-  border: 1px solid gainsboro;
+  border: 1px solid Gainsboro;
   border-radius: 0.25em;
   padding: 0.5em 0.75em; }
 
@@ -240,7 +236,7 @@ label {
 
 form .error {
   visibility: hidden;
-  background: tomato;
+  background: Tomato;
   color: White;
   font-size: .875em;
   line-height: 1.375em;
@@ -254,7 +250,7 @@ select {
   display: block;
   width: 100%;
   padding: .25em;
-  border: 1px solid gainsboro;
+  border: 1px solid Gainsboro;
   border-radius: 0.25em; }
   input:not([type=checkbox]):not([type=radio]).invalid,
   textarea.invalid,
@@ -294,150 +290,165 @@ input[type=radio] {
 textarea {
   height: 5em; }
 
-.r::after {
+.row::after {
   content: " ";
   display: table;
   clear: both; }
 
-.c1, .c2, .c3, .c4, .c5, .c6, .c7, .c8, .c9, .c10, .c11, .c12 {
+.col1, .col2, .col3, .col4, .col5, .col6, .col7, .col8, .col9, .col10, .col11, .col12 {
   box-sizing: border-box;
   float: left;
   margin-top: 1em;
   padding: 0 1em; }
-  .r .c1:first-child, .r .c2:first-child, .r .c3:first-child, .r .c4:first-child, .r .c5:first-child, .r .c6:first-child, .r .c7:first-child, .r .c8:first-child, .r .c9:first-child, .r .c10:first-child, .r .c11:first-child, .r .c12:first-child {
+  .row .col1:first-child, .row .col2:first-child, .row .col3:first-child, .row .col4:first-child, .row .col5:first-child, .row .col6:first-child, .row .col7:first-child, .row .col8:first-child, .row .col9:first-child, .row .col10:first-child, .row .col11:first-child, .row .col12:first-child {
     padding-left: 0; }
-  .r .c1:last-child, .r .c2:last-child, .r .c3:last-child, .r .c4:last-child, .r .c5:last-child, .r .c6:last-child, .r .c7:last-child, .r .c8:last-child, .r .c9:last-child, .r .c10:last-child, .r .c11:last-child, .r .c12:last-child {
+  .row .col1:last-child, .row .col2:last-child, .row .col3:last-child, .row .col4:last-child, .row .col5:last-child, .row .col6:last-child, .row .col7:last-child, .row .col8:last-child, .row .col9:last-child, .row .col10:last-child, .row .col11:last-child, .row .col12:last-child {
     padding-right: 0; }
 
-.c1 {
+.col1 {
   width: 8.33333%; }
 
-.c2 {
+.col2 {
   width: 16.66667%; }
 
-.c3 {
+.col3 {
   width: 25%; }
 
-.c4 {
+.col4 {
   width: 33.33333%; }
 
-.c5 {
+.col5 {
   width: 41.66667%; }
 
-.c6 {
+.col6 {
   width: 50%; }
 
-.c7 {
+.col7 {
   width: 58.33333%; }
 
-.c8 {
+.col8 {
   width: 66.66667%; }
 
-.c9 {
+.col9 {
   width: 75%; }
 
-.c10 {
+.col10 {
   width: 83.33333%; }
 
-.c11 {
+.col11 {
   width: 91.66667%; }
 
-.c12 {
+.col12 {
   width: 100%; }
 
-.r .c12 {
+.row .col12 {
   padding-left: 0;
   padding-right: 0; }
 
-.no {
+.hide {
   display: none !important; }
 
+.show,
+.small-hide,
+.medium-hide {
+  display: block !important; }
+
 @media (min-width: 768px) and (max-width: 1279px) {
-  .c1m {
+  .medium-col1 {
     width: 8.33333%; }
 
-  .c2m {
+  .medium-col2 {
     width: 16.66667%; }
 
-  .c3m {
+  .medium-col3 {
     width: 25%; }
 
-  .c4m {
+  .medium-col4 {
     width: 33.33333%; }
 
-  .c5m {
+  .medium-col5 {
     width: 41.66667%; }
 
-  .c6m {
+  .medium-col6 {
     width: 50%; }
 
-  .c7m {
+  .medium-col7 {
     width: 58.33333%; }
 
-  .c8m {
+  .medium-col8 {
     width: 66.66667%; }
 
-  .c9m {
+  .medium-col9 {
     width: 75%; }
 
-  .c10m {
+  .medium-col10 {
     width: 83.33333%; }
 
-  .c11m {
+  .medium-col11 {
     width: 91.66667%; }
 
-  .c12m {
+  .medium-col12 {
     width: 100%; }
 
-  .r .c12m {
+  .row .medium-col12 {
     padding-left: 0;
     padding-right: 0; }
 
-  .nom {
-    display: none !important; } }
+  .medium-hide,
+  .small-show {
+    display: none !important; }
+
+  .medium-show,
+  .small-hide {
+    display: block !important; } }
 @media (max-width: 767px) {
-  .c1s {
+  .small-col1 {
     width: 8.33333%; }
 
-  .c2s {
+  .small-col2 {
     width: 16.66667%; }
 
-  .c3s {
+  .small-col3 {
     width: 25%; }
 
-  .c4s {
+  .small-col4 {
     width: 33.33333%; }
 
-  .c5s {
+  .small-col5 {
     width: 41.66667%; }
 
-  .c6s {
+  .small-col6 {
     width: 50%; }
 
-  .c7s {
+  .small-col7 {
     width: 58.33333%; }
 
-  .c8s {
+  .small-col8 {
     width: 66.66667%; }
 
-  .c9s {
+  .small-col9 {
     width: 75%; }
 
-  .c10s {
+  .small-col10 {
     width: 83.33333%; }
 
-  .c11s {
+  .small-col11 {
     width: 91.66667%; }
 
-  .c12s {
+  .small-col12 {
     width: 100%; }
 
-  .r .c12s {
+  .row .small-col12 {
     padding-left: 0;
     padding-right: 0; }
 
-  .nos {
-    display: none !important; } }
+  .small-hide,
+  .medium-show {
+    display: none !important; }
+
+  .small-show,
+  .medium-hide {
+    display: block !important; } }
 /* Lists */
 nav ul,
 .dropdown + ul,
@@ -499,7 +510,7 @@ nav a,
   .toolbar a.active,
   .tabs a.active,
   .dropdown + ul a.active {
-    background: lightsteelblue;
+    background: LightSteelBlue;
     color: White;
     cursor: default; }
 
@@ -519,7 +530,7 @@ nav a,
   .dropdown + ul,
   .dropdown + ul li {
     border-style: solid;
-    border-color: gainsboro; }
+    border-color: Gainsboro; }
   .toolbar li,
   .tabs li,
   .dropdown + ul li {
@@ -573,7 +584,7 @@ html, body, #overlay {
   .modal .close {
     font-size: 1.4em;
     font-weight: bold;
-    color: silver;
+    color: Silver;
     position: absolute;
     top: .5em;
     right: .75em; }
@@ -593,21 +604,21 @@ html, body, #overlay {
     top: .125em; }
   .switches label::before {
     width: 1.75em;
-    border: 1px solid gainsboro;
+    border: 1px solid Gainsboro;
     margin-right: .5em; }
   .switches label::after {
-    background: lightsteelblue;
+    background: LightSteelBlue;
     width: 1em; }
 .switches input {
   display: none; }
   .switches input:checked + label::after {
-    background: cornflowerblue;
+    background: CornflowerBlue;
     left: .75em; }
 
 [data-tab] {
   display: none; }
 
-.cf::after {
+.clearfix::after {
   content: " ";
   display: table;
   clear: both; }
@@ -617,3 +628,5 @@ html, body, #overlay {
 
 .right {
   float: right; }
+
+/*# sourceMappingURL=app.css.map */
