--- a/jade/messages.jade
+++ b/jade/messages.jade
@@ -1,11 +1,19 @@
-.message This is the default message. 
-  a(href="#") Do something
+extends index
 
-.caution.message This is the caution message. 
-  a(href="#") Do something
+block title
+  title phew | messages
 
-.alert.message This is the alert message. 
-  a(href="#") Do something
+block content
+  h1 Messages
 
-.success.message This is the success message. 
-  a(href="#") Do something
+  .message This is the default message. 
+    a(href="#") Do something
+
+  .caution.message This is the caution message. 
+    a(href="#") Do something
+
+  .alert.message This is the alert message. 
+    a(href="#") Do something
+
+  .success.message This is the success message. 
+    a(href="#") Do something
