--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,5 +1,6 @@
-@import 'components/utils';
 @import 'vars';
+
+@import 'components/_utils';
 @import 'components/accordion';
 @import 'components/breadcrumbs';
 @import 'components/buttons';
