--- a/jade/spinner.jade
+++ b/jade/spinner.jade
@@ -1,3 +1,11 @@
-.message Simply remove the <code>.loading</code> class when AJAX is done.
+extends index
 
-h1.loading
+block title
+  title phew | spinner
+
+block content
+  h1 Spinner
+
+  .message Simply remove the <code>.loading</code> class when AJAX is done.
+
+  h1.loading
