--- a/jade/type.jade
+++ b/jade/type.jade
@@ -1,5 +1,18 @@
-.row
-  .col-4
+extends index
+
+block title
+  title phew | type
+
+block content
+  h1 Type
+
+  ul.tabs.inline
+    li
+      a(href="#hierarchy") Hierarchy
+    li
+      a(href="#lists") Lists
+
+  .tab-content#hierarchy
     h1 Headline 1
     h2 Headline 2
     h3 Headline 3
@@ -10,22 +23,24 @@
     p
       code Code
 
-  .col-4
-    ul
-      li List item 1
+  .tab-content#lists
+    .row
+      .col-4
         ul
-          li List item 1a
-          li List item 1b
-          li List item 1c
-      li List item 2
-      li List item 3
+          li List item 1
+            ul
+              li List item 1a
+              li List item 1b
+              li List item 1c
+          li List item 2
+          li List item 3
 
-  .col-4
-    ol
-      li List item 1
+      .col-4
         ol
-          li List item 1a
-          li List item 1b
-          li List item 1c
-      li List item 2
-      li List item 3
+          li List item 1
+            ol
+              li List item 1a
+              li List item 1b
+              li List item 1c
+          li List item 2
+          li List item 3
