--- a/scss/components/inline-list.scss
+++ b/scss/components/inline-list.scss
@@ -1,8 +1,9 @@
 .inline,
 .breadcrumbs,
 .button-group {
-  @include unlist;
   @include clearfix;
+  list-style: none;
+  padding: 0;
 
   > li {
     float: left;
