--- a/scss/components/menu.scss
+++ b/scss/components/menu.scss
@@ -23,9 +23,10 @@
   }
 
   ul {
+    list-style: none;
+    padding: 0;
     display: none;
     position: absolute;
-    @include unlist;
     background: $bg;
     border: $stroke;
     border-radius: 0 $radius $radius $radius;
