--- a/jade/form.jade
+++ b/jade/form.jade
@@ -14,14 +14,11 @@ block content
     | and use this library instead.
 
   .row
-    .col-3
-      ul.tabs
-        li
-          a(href="#email-address") Email address
-        li
-          a(href="#select") Select
-        li
-          a(href="#more-types") More types
+    .col-3.tabs
+      a(href="#email-address") Email address
+      a(href="#select") Select
+      a(href="#more-types") More types
+
     .col-9
       .tab-content#email-address
         h2 Email address
