--- a/jade/type.jade
+++ b/jade/type.jade
@@ -6,11 +6,9 @@ block title
 block content
   h1 Type
 
-  ul.tabs.inline
-    li
-      a(href="#hierarchy") Hierarchy
-    li
-      a(href="#lists") Lists
+  .tabs.inline
+    a(href="#hierarchy") Hierarchy
+    a(href="#lists") Lists
 
   .tab-content#hierarchy
     h1 Headline 1
