--- a/jade/index.jade
+++ b/jade/index.jade
@@ -17,7 +17,7 @@ html(lang="en")
         nav
           ul
             li
-              a(href="index.html") Phew
+              a(href="./") Phew
             li
               a(href="accordion.html") Accordion
             li
