--- a/jade/type.jade
+++ b/jade/type.jade
@@ -42,3 +42,11 @@ block content
               li List item 1c
           li List item 2
           li List item 3
+
+      .col-4
+        h4
+          code ul.listless
+        ul.listless
+          li List item 1
+          li List item 2
+          li List item 3
