--- a/scss/app.scss
+++ b/scss/app.scss
@@ -12,6 +12,7 @@
 @import 'components/messages';
 @import 'components/modal';
 @import 'components/spinner';
+@import 'components/switch';
 @import 'components/tabs';
 @import 'components/tooltip';
 @import 'components/type';
