--- a/jade/form.jade
+++ b/jade/form.jade
@@ -6,6 +6,7 @@ block title
 block scripts
   script(type="text/javascript" src="js/disabled.js")
   script(type="text/javascript" src="js/form.js")
+  script(type="text/javascript" src="js/switch.js")
 
 block content
   h1 Form
@@ -15,11 +16,55 @@ block content
 
   .row
     .col-3.tabs
+      a(href="#checkboxes") Checkboxes
       a(href="#email-address") Email address
-      a(href="#select") Select
       a(href="#more-types") More types
+      a(href="#radios") Radios
+      a(href="#select") Select
 
     .col-9
+
+      .tab-content#checkboxes
+        h2 Checkboxes
+
+        .message <code>[data-match-id]</code> needs to match an <code>input[id]</code> for confirmation fields.
+
+        form(novalidate)
+          .row
+            .col-6
+              ul.listless
+                li Plain checkboxes
+                li
+                  label
+                    input(type="checkbox" name="plain-checkboxes")
+                    |  Foo
+                li
+                  label
+                    input(type="checkbox" name="plain-checkboxes")
+                    |  Bar
+                li
+                  label
+                    input(type="checkbox" name="plain-checkboxes")
+                    |  Baz
+            .col-6
+              ul.listless
+                li Switches
+                li
+                  label.switch
+                    input(type="checkbox" name="switches")
+                    |  Foo
+                li
+                  label.switch
+                    input(type="checkbox" name="switches")
+                    |  Bar
+                li
+                  label.switch
+                    input(type="checkbox" name="switches")
+                    |  Baz
+          .row
+            .col-12
+              button(type="submit") Test checkboxes
+
       .tab-content#email-address
         h2 Email address
 
@@ -39,7 +84,49 @@ block content
                 .error Email addresses don’t match
           .row
             .col-12
-              button(type="submit") Test email addresses
+              button(type="submit") Test email address
+
+      .tab-content#more-types
+        h2 More types
+
+        form(novalidate)
+          .row
+            .col-6
+              label Some required text
+                .required Required
+                input(type="text" required)
+                .error Enter some text
+            .col-6
+              label An optional loose numeric value
+                input(type="numeric")
+                .error Enter a numeric value
+          .row
+            .col-12
+              button(type="submit") Test these types
+
+      .tab-content#radios
+        h2 Radios
+
+        .message Radios should just default to the first option. “Required” is implied.
+
+        form(novalidate)
+          .row
+            .col-12
+              ul.listless
+                li Radio star
+                  .required Required
+                li
+                  label
+                    input(type="radio" name="the-radio" checked)
+                    |  Foo
+                li
+                  label
+                    input(type="radio" name="the-radio")
+                    |  Bar
+                li
+                  label
+                    input(type="radio" name="the-radio")
+                    |  Baz
 
       .tab-content#select
         h2 Select
@@ -62,21 +149,3 @@ block content
                   option foo
                   option bar
                   option baz
-
-      .tab-content#more-types
-        h2 More types
-
-        form(novalidate)
-          .row
-            .col-6
-              label Some required text
-                .required Required
-                input(type="text" required)
-                .error Enter some text
-            .col-6
-              label An optional loose numeric value
-                input(type="numeric")
-                .error Enter a numeric value
-          .row
-            .col-12
-              button(type="submit") Test these types
