--- a/css/app.css
+++ b/css/app.css
@@ -134,10 +134,25 @@ button,
   border-radius: 0 0.125rem 0.125rem 0; }
 
 input:not([type=checkbox]):not([type=radio]),
-select {
+select,
+fieldset {
   border: 1px solid Gainsboro;
   border-radius: 0.125rem;
-  box-sizing: border-box;
+  box-sizing: border-box; }
+
+fieldset {
+  margin: 0;
+  padding: .25rem .5rem .75rem; }
+  fieldset ul {
+    list-style: none;
+    margin: 0;
+    padding: 0 0 0 .25rem; }
+
+legend {
+  padding: 0 .25rem; }
+
+input:not([type=checkbox]):not([type=radio]),
+select {
   height: 2em;
   padding: 0.375rem;
   position: relative;
