--- a/scss/components/form.scss
+++ b/scss/components/form.scss
@@ -1,8 +1,28 @@
 input:not([type=checkbox]):not([type=radio]),
-select {
+select,
+fieldset {
   border: $stroke;
   border-radius: $radius;
   box-sizing: border-box;
+}
+
+fieldset {
+  margin: 0;
+  padding: .25rem .5rem .75rem;
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0 0 0 .25rem;
+  }
+}
+
+legend {
+  padding: 0 .25rem;
+}
+
+input:not([type=checkbox]):not([type=radio]),
+select {
   height: 2em;
   padding: $input-padding;
   position: relative;
