--- a/css/app.css
+++ b/css/app.css
@@ -75,7 +75,7 @@ button,
     button.secondary:hover,
     .button.secondary:hover,
     .menu > a.secondary:hover {
-      background: #b6b6b6; }
+      background: #c3c3c3; }
   button.success,
   .button.success,
   .menu > a.success {
@@ -105,7 +105,7 @@ button,
   .button.disabled,
   .menu > a[disabled],
   .menu > a.disabled {
-    color: #8d8d8d; }
+    color: #747474; }
     button[disabled], button[disabled]:hover, button.disabled, button.disabled:hover,
     .button[disabled],
     .button[disabled]:hover,
@@ -122,6 +122,12 @@ button,
   .menu > a.disabled,
   .menu > a.loading {
     cursor: default; }
+    button.disabled:focus, button.loading:focus,
+    .button.disabled:focus,
+    .button.loading:focus,
+    .menu > a.disabled:focus,
+    .menu > a.loading:focus {
+      outline: none; }
 
 .button-group li:not(:first-child) {
   margin-left: 1px; }
@@ -440,7 +446,7 @@ input[type=radio] {
     .modal .close::before {
       content: '×'; }
     .modal .close:hover {
-      color: #b6b6b6; }
+      color: #c3c3c3; }
   .modal .cancel {
     float: right;
     margin: .75rem 0 .75rem .75rem; }
